--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 API_PORT=3000
-DATABASE_PORT=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_DATABASE=
-DATABASE_LOGGING=
+DATABASE_PORT=5432
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=admin
+DATABASE_DATABASE=tickets
+DATABASE_LOGGING=true
