--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "issues": "https://github.com/ManuelGil/tickets/issues"
   },
   "private": true,
-  "license": "",
+  "license": "UNLICENSED",
   "contributors": [
     {
       "name": "Santiago Rey",
@@ -27,6 +27,11 @@
   "scripts": {
     "dev:api": "nx serve api",
     "dev:web": "nx serve web",
+    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js -d config/ormconfig.ts",
+    "make:migration": "npm run typeorm migration:generate -- ",
+    "make:seed": "ts-node -r tsconfig-paths/register node_modules/typeorm-extension/dist/cli/index.js seed -d config/ormconfig.ts",
+    "migrate:run": "npm run typeorm migration:run",
+    "migrate:revert": "npm run typeorm migration:revert",
     "prepare": "husky install"
   },
   "dependencies": {
