refactor(api): :recycle: change configs to implements migrations
add migration commands with nx for typeorm

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -56,6 +56,46 @@
           "codeCoverage": true
         }
       }
+    },
+    "typeorm": {
+      "executor": "nx:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "ts-node --project tsconfig.app.json ../../node_modules/typeorm/cli -d ../../apps/api/config/ormconfig.ts",
+        "cwd": "apps/api"
+      }
+    },
+    "mig-gen": {
+      "executor": "nx:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "nx run api:typeorm migration:generate ../../apps/api/migrations/{args.name}",
+        "cwd": "apps/api"
+      }
+    },
+    "mig-run": {
+      "executor": "nx:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "nx run api:typeorm migration:run",
+        "cwd": "apps/api"
+      }
+    },
+    "mig-revert": {
+      "executor": "nx:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "nx run api:typeorm migration:revert",
+        "cwd": "apps/api"
+      }
+    },
+    "seed": {
+      "executor": "nx:run-commands",
+      "outputs": [],
+      "options": {
+        "command": "ts-node --project tsconfig.app.json ../../node_modules/typeorm-extension/dist/cli/index.js seed -d ../../apps/api/config/ormconfig.ts",
+        "cwd": "apps/api"
+      }
     }
   },
   "tags": []
