--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 API_PORT=3000
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=admin
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=root
 DATABASE_DATABASE=tickets
-DATABASE_LOGGING=true
+DATABASE_LOGGING=all
+DATABASE_RETRY_ATTEMPTS=10
+DATABASE_RETRY_DELAY=3000
