--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,yarn,linux,macos,react,dotenv,windows,executable,sublimetext,intellij+all,webstorm+all,visualstudiocode,database
 
 ### Database ###
+postgres_data
 *.accdb
 *.db
 *.dbf
