--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DATABASE_LOGGING=all
 DATABASE_RETRY_ATTEMPTS=10
 DATABASE_RETRY_DELAY=3000
 JWT_SECRET=
+DATABASE_TYPE=postgres
+DATABASE_HOST=localhost
