--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.14",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@mui/styled-engine-sc": "^5.11.11",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -48,6 +48,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/bcrypt": "^5.0.0",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
@@ -60,6 +61,8 @@
     "pg": "^8.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
