--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "styled-components": "^5.3.9",
     "tslib": "^2.3.0",
     "typeorm": "0.3.11",
-    "typeorm-extension": "^2.6.2"
+    "typeorm-extension": "^2.6.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.0",
@@ -96,6 +97,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "5.3.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^3.0.0",
