--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "rxjs": "^7.0.0",
     "styled-components": "^5.3.9",
     "tslib": "^2.3.0",
-    "typeorm": "0.3.11",
+    "typeorm": "^0.3.14",
     "typeorm-extension": "^2.6.2",
     "uuid": "^9.0.0"
   },
